[package]
name = "zenoh-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "pub"
path = "src/bin/pub/main.rs"


[[bin]]
name = "sub"
path = "src/bin/sub/main.rs"

[lib]
name = "cli"
path = "src/lib.rs"

[dependencies]
zenoh = "0.10.0-rc"
async-std = "1.12.0"
ctrlc = "3.4.1"
futures = "0.3.29"
clap = "3.2.25"


# Optimize all crates
[profile.release]
opt-level = 3
strip = true  # Automatically strip debug symbols from the binary
lto = true    # Enable Link Time Optimization (LTO)
codegen-units = 1 # Reduce Parallel Code Generation Units to Increase Optimization


# There's a Cargo feature named profile-overrides
# that lets you override the optimization level of dependencies.
# https://docs.rust-embedded.org/book/unsorted/speed-vs-size.html
[profile.release.package."*"]
opt-level = 3
strip = true  # Automatically strip debug symbols from the binary to reduce size
codegen-units = 1 # Reduce Parallel Code Generation Units to Increase Optimization
